--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "kh.edu.app.myproject.lc_luncher"
         minSdkVersion 22
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -22,15 +22,17 @@ android {
 }
 
 dependencies {
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
-    compile 'com.facebook.android:facebook-android-sdk:4.23.0'
-    compile 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+
+    implementation'com.google.android.gms:play-services-auth:15.0.1'
+
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+
 
 }
