--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -13,30 +15,30 @@
         android:roundIcon="@drawable/lclogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.facebook.accountkit.ApplicationName"
+        <meta-data
+            android:name="com.facebook.accountkit.ApplicationName"
             android:value="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/FACEBOOK_APP_ID" />
-        <meta-data android:name="com.facebook.accountkit.ClientToken"
+        <meta-data
+            android:name="com.facebook.accountkit.ClientToken"
             android:value="@string/ACCOUNT_KIT_CLIENT_TOKEN" />
 
         <activity android:name="com.facebook.accountkit.ui.AccountKitEmailRedirectActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="@string/ak_login_protocol_scheme"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/ak_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name="com.facebook.accountkit.ui.AccountKitActivity"
             android:theme="@style/AppLoginTheme"
-            tools:replace="android:theme">
-        </activity>
-
+            tools:replace="android:theme"></activity>
         <activity android:name=".Activity.StartupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,15 +47,26 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.HomeFoodActivity" />
-        <activity android:name=".Activity.MainActivity" />
         <activity android:name=".Activity.SignupActivity" />
         <activity android:name=".Activity.AdminActivity" />
-        <activity android:name=".Activity.LoginActivity" />
+        <activity android:name=".Activity.MainActivity" />
         <activity android:name=".Activity.NewLogin" />
         <activity android:name=".Fragment.PersonalInfoFragment" />
         <activity android:name=".Fragment.CastsFragment" />
         <activity android:name=".Fragment.HistoryFragment" />
-        <activity android:name=".Fragment.FoodContentFragment"></activity>
+        <activity android:name=".Fragment.FoodContentFragment" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
     </application>
 
 </manifest>
